k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: three-tier
  labels:
    name: three-tier
    app.kubernetes.io/part-of: three-tier-app
